5/14/2025 today work front-end

--- a/ace.html
+++ b/ace.html
@@ -1899,10 +1899,7 @@
                                  <a href="about.html">About</a>
                               </li>
                               <li class="nav-item dropdown">
-                                 <a class="dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    Courses
-                                 </a>
+                                 <a class="  " href="#" id="navbarDropdown">Courses</a>
                                  <ul class="dropdown-menu list" aria-labelledby="navbarDropdown">
 
                                     <li><a class="dropdown-item option"
@@ -2334,16 +2331,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                              <a href="https://wa.me/1234567890" 
-                              class="  text-center" 
-                              style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" 
-                              target="_blank">
-                              WhatsApp
-                              </a>
-                              &nbsp;
-                            
+                        <div class="d-grid mt-auto">                                 
                            <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2383,8 +2374,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/ace-perinthalmanna/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2424,8 +2417,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/ace-perinthalmanna/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2465,8 +2460,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/ace-perinthalmanna/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2507,8 +2504,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/ace-perinthalmanna/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2549,8 +2548,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/ace-perinthalmanna/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2591,8 +2592,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/ace-perinthalmanna/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2633,8 +2636,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/ace-kondotty/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2675,8 +2680,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/Oxdu_Calicut/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2717,8 +2724,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/Oxdu_Calicut/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2759,8 +2768,10 @@
                            </div>
                         </div>
 
-                        <div class="d-grid mt-auto">
-                           <a href="https://#/en/branch/Oxdu_Calicut/" class="tp-btn-7 py-2 text-center">Open</a>
+                        <div class="d-grid mt-auto">                                 
+                           <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
+                           &nbsp;
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2785,22 +2796,23 @@
                <div class="col-xxl-5 col-xl-5 col-lg-5  order-1 order-lg-2">
                   <div class="about__content pl-25 pr-25 home-about">
                      <div class="section__title-wrapper mb-15">
-                        <h2 class="section__title about-title">Welcome to Oxdu Integrated Media School
+                        <h2 class="section__title about-title">Welcome to ACE Institute
                         </h2>
                      </div>
                      <p>
-                        Taking a step up in your career ladder at Oxdu Integrated Media School, Kerala, with our
-                        postgraduate diploma courses in
-                        Malappuram. We've established our curriculum based on the basic of education in practice,
-                        interactive as well as
-                        future-ready. Be it AI-integrated digital marketing or using your imagination for graphics or
-                        master the perfect world
-                        of web development-we will give you all the tools you need.
+                        ACE Institute – Your Gateway to Government Jobs
+                        Prepare for PSC, RRB, SSC, K-TET, and Banking exams with expert guidance.
+                        Trusted by thousands of successful candidates across Kerala.
+                        Courses available in both online and offline formats.
+                        Experienced faculty with exam-specific strategies.
+                        Comprehensive study materials and daily practice tests.
+                        Live interactive classes and recorded video support.
                      </p>
-                     <p>Understanding that the world is moving at the speed of lightning, we are blending artificial
-                        intelligence with hands-on learning in our programs. So, if you are ready to future-proof your
-                        career, this is the
-                        right place.</p>
+                     <p>Personalized doubt-clearing and mentorship sessions.
+                        Mock exams to track your progress regularly.
+                        Flexible timings to suit students and working professionals.
+                        Join ACE Institute and take the next step toward your career goal!
+                     </p>
                   </div>
                </div>
             </div>
@@ -2925,7 +2937,7 @@
 
                                              <div class="course__level d-flex align-items-center gap-3 ms-3 me-3">
                                                 <i class="fas fa-wifi " style="font-size: 20px;"></i>
-                                                <span class="text-muted fw-medium">Online and Offline Class Available Class Available </span>
+                                                <span class="text-muted fw-medium">Online and Offline Class Available</span>
                                              </div>
                                           </div>
 
@@ -3104,7 +3116,7 @@
 
       <!-- price area start -->
 
-<!-- 
+
  <div class="container">
          <div class="row">
             <div class="col-xxl-12">
@@ -3132,23 +3144,22 @@
                   </div>
                </div>
             </div>
-
             <div class="col-xxl-3 col-xl-3 col-lg-3 col-md-6 mb-3">
                <div class="price__item h-100 active white-bg mb-30 transition-3 fix">
-                  <h3 class="price__title">Designer Community</h3>
+                  <h3 class="price__title">Developer Community</h3>
 
                   <div class="price__content">
                      <div class="price__list mb-4">
                         <ul>
-                           <li>Design Showcase<span><i class="fa-solid fa-check"></i></span></li>
-                           <li>Collaboration Opportunities <span><i class="fa-solid fa-check"></i></span></li>
-                           <li>Design Challenges <span><i class="fa-solid fa-check"></i></span></li>
-                           <li>Resource Sharing <span><i class="fa-solid fa-check"></i></span></li>
-                           <li>Designer Q&A Forum <span><i class="fa-solid fa-check"></i></span></li>
+                           <li>Code Sharing & Review <span><i class="fa-solid fa-check"></i></span></li>
+                           <li>Tech News & updates<span><i class="fa-solid fa-check"></i></span></li>
+                           <li>Developer Challenges <span><i class="fa-solid fa-check"></i></span></li>
+                           <li>Learning Resources Library <span><i class="fa-solid fa-check"></i></span></li>
+                           <li>Networking Events <span><i class="fa-solid fa-check"></i></span></li>
                         </ul>
                      </div>
                      <div class="app__item w-100">
-                        <a href="https://chat.whatsapp.com/KlvXBU6LgSSFMIn9HomGAf" target="_blank" class="py-2 w-100" style="background: #4BCC5B;padding: 0 20px;">
+                        <a href="https://chat.whatsapp.com/EA4s9Qjqj6BKdAGO5DT3p8" target="_blank" class="py-2 w-100" style="background: #4BCC5B;padding: 0 20px;">
                            <img src="/static/web/img/whatsapp.svg" style="height:25px" alt="">
                            Join Community
                         </a>
@@ -3165,7 +3176,7 @@
                      <div class="price__list mb-4">
                         <ul>
                            <li>Code Sharing & Review <span><i class="fa-solid fa-check"></i></span></li>
-                           <li>Tech News & Updates<span><i class="fa-solid fa-check"></i></span></li>
+                           <li>Tech News & updates<span><i class="fa-solid fa-check"></i></span></li>
                            <li>Developer Challenges <span><i class="fa-solid fa-check"></i></span></li>
                            <li>Learning Resources Library <span><i class="fa-solid fa-check"></i></span></li>
                            <li>Networking Events <span><i class="fa-solid fa-check"></i></span></li>
@@ -3204,9 +3215,8 @@
                   </div>
                </div>
             </div>
-
          </div>
-      </div>  -->
+      </div> 
 
       <!-- price area end -->
 
@@ -3215,7 +3225,7 @@
       <!-- faq area end -->
 
 
-      <div>
+      <!-- <div>
          <img class="footer-img img-fluid w-100"
             src="./Best Job Oriented Courses _ Career-Focused Training at OXDU Integrated Media School_files/students.webp">
       </div>
@@ -3260,7 +3270,7 @@
       <div>
          <img class="footer-img img-fluid w-100"
             src="./Best Job Oriented Courses _ Career-Focused Training at OXDU Integrated Media School_files/students_DEg890H.webp">
-      </div>
+      </div> -->
 
    </main>
 
