--- a/about.html
+++ b/about.html
@@ -469,7 +469,7 @@
             <div class="row">
                <div class="breadcrumb__list breadcrumb__list-2 mb-10">
                   <span><a href="/en/">Home</a></span>
-                  <span class="dvdr"><i class="fa-regular fa-angle-right"></i></span>
+                  <span class="dvdr"><i class="fa-solid fa-angle-right"></i></span>
                   <span>About</span>
                </div>
             </div>
@@ -1197,7 +1197,7 @@
                   <div class="row">
                      <div class="col-xxl-12">
                         <div class="footer__copyright text-center">
-                           <p>© 2025 Oxdu. All Rights Reserved</p>
+                           <p>© 2025 ACE Institute. All Rights Reserved</p>
                         </div>
                      </div>
                   </div>
