--- a/ace.html
+++ b/ace.html
@@ -2334,7 +2334,7 @@
                         <div class="d-grid mt-auto">                                 
                            <a href="https://#/en/branch/ace-kochi/" class="tp-btn-7 py-2 text-center">Open</a>
                            &nbsp;
-                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 5px; height: 106%;" target="_blank">WhatsApp</a>
+                           <a href="https://wa.me/1234567890" class="text-center" style="background-color: #25D366; color: white; border-radius: 6px; height: 114%;" target="_blank">WhatsApp</a>
                         </div>
                      </div>
                   </div>
@@ -2907,7 +2907,7 @@
                                                 <a href="https://#/en/course/best-digital-marketing-institute-kerala/"
                                                    class="tp-btn-9">More Details</a>
                                                 <a href="https://wa.me/+918848009860" target="_blank"
-                                                   class="tp-btn-9 whatsapp-btn">
+                                                   class="tp-btn-9 whatsapp-btn" style="color: white;" >
 
                                                    WhatsApp Now
                                                 </a>
@@ -2977,7 +2977,7 @@
                                                 <a href="https://#/en/course/graphic-design-institute-kerala/"
                                                    class="tp-btn-9">More Details</a>
                                                 <a href="https://wa.me/+918848009860" target="_blank"
-                                                   class="tp-btn-9 whatsapp-btn">
+                                                   class="tp-btn-9 whatsapp-btn" style="color: white;">
 
                                                    WhatsApp Now
                                                 </a>
@@ -3050,7 +3050,7 @@
                                                 <a href="https://#/en/course/best-digital-marketing-institute-kerala/"
                                                    class="tp-btn-9">More Details</a>
                                                 <a href="https://wa.me/+918848009860" target="_blank"
-                                                   class="tp-btn-9 whatsapp-btn">
+                                                   class="tp-btn-9 whatsapp-btn" style="color: white;">
 
                                                    WhatsApp Now
                                                 </a>
@@ -3377,7 +3377,7 @@
                   <div class="row">
                      <div class="col-xxl-12">
                         <div class="footer__copyright text-center">
-                           <p>© 2025 Oxdu. All Rights Reserved</p>
+                           <p>© 2025 ACE Institute. All Rights Reserved</p>
                         </div>
                      </div>
                   </div>
