--- a/courses.html
+++ b/courses.html
@@ -943,7 +943,7 @@
                         <div class="row">
                             <div class="col-xxl-12">
                                 <div class="footer__copyright text-center">
-                                    <p>© 2025 Oxdu. All Rights Reserved</p>
+                                    <p>© 2025 ACE Institute. All Rights Reserved</p>
                                 </div>
                             </div>
                         </div>
